@@ -15,7 +15,6 @@ import team.retum.jobis.domain.notification.model.Notification;
 import team.retum.jobis.domain.notification.model.Topic;
 import team.retum.jobis.global.exception.FailedSendingMessagesException;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Component
@@ -27,7 +26,7 @@ public class FCMUtil {
         }
 
         try {
-            FirebaseMessaging.getInstance().subscribeToTopicAsync(Arrays.asList(token), topic.toString()).get();
+            FirebaseMessaging.getInstance().subscribeToTopicAsync(List.of(token), topic.name().toLowerCase()).get();
         } catch (Exception e) {
             throw new FailedToSubscriptionException();
         }
@@ -39,7 +38,7 @@ public class FCMUtil {
         }
 
         try {
-            FirebaseMessaging.getInstance().unsubscribeFromTopicAsync(Arrays.asList(token), topic.toString()).get();
+            FirebaseMessaging.getInstance().unsubscribeFromTopicAsync(List.of(token), topic.name().toLowerCase()).get();
         } catch (Exception e) {
             throw new FailedToUnsubscriptionException();
         }
